--- a/observability/pom.xml
+++ b/observability/pom.xml
@@ -114,6 +114,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-management</artifactId>
+          </dependency>
 
         <!-- test dependencies -->
         <dependency>
